<resources>
    <string name="app_name">Android_Semester_Project</string>
    <string name="all_in_one">All in one</string>
    <string name="se_7b">SE-7B</string>
    <string name="demo">Demo</string>
    <string name="introduction">Introduction</string>
    <string name="details">In this app we have implemented everything which we studied in our whole semester. We used Kotlin for mobile app development</string>
    <string name="click_here">Click here</string>
    <string name="ijlal_hussain">Ijlal Hussain</string>
    <string name="fa18_bse_083">FA18-BSE-083</string>
    <string name="basla_azhar">Basla Azhar</string>
    <string name="fa18_bse_057">FA18-BSE-057</string>
    <string name="software_engineer">Software Engineer</string>
    <string name="project_partners">Project partners</string>
    <string name="check_implementation">Check Implementation</string>
    <string name="settings">Settings</string>
    <string name="auto_play">Auto Play</string>
    <string name="title">Title</string>
    <string name="time_picker_activity">Time picker activity</string>
    <string name="time_picker">Time Picker</string>
    <string name="what_s_time">what\'s time</string>
    <string name="_08_45_pm">08 : 45 PM</string>
    <string name="select_time">Select Time</string>
    <string name="cancel_alarm">Cancel Alarm</string>
    <string name="set_alarm">Set Alarm</string>
    <string name="recipent_email_address">Recipent Email Address</string>
    <string name="subject">Subject</string>
    <string name="send_email">Send email</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="async_task">Async Task</string>
    <string name="mobile_no">Mobile No</string>
    <string name="message">Message</string>
    <string name="send_sms">Send SMS</string>
    <string name="send_and_receive_sms">Send and Receive SMS</string>
    <string name="location">Location</string>
    <string name="current_location">Current Location</string>
    <string name="last_know_location">Last know location</string>
    <string name="get_current_location">Get Current Location</string>
    <string name="address_xyz">Address: XYZ</string>
    <string name="get_previous_location">Get Previous Location</string>
    <string name="enter_the_name_of_file">Enter the name of file</string>
    <string name="read_data">Read data</string>
    <string name="write_file">Write file</string>
    <string name="data">Data</string>
    <string name="email_sending">Email Sending</string>
    <string name="all_topics">All topics</string>
    <string name="this_will_not_show_any_output_because_async_task_is_deprecated">This will not show any output because Async task is deprecated</string>
    <string name="todo">TODO</string>


    <string-array name="auto_play_entries">
        <item>Enabled</item>
        <item>Disabled</item>
        <item>Wifi only</item>
    </string-array>

    <string-array name="entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>


</resources>