<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@color/teal_200"
    tools:context=".EmailActivity">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/gmail"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_sending"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        />

    <EditText
        android:id="@+id/recipentEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/recipent_email_address"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        />
    <EditText
        android:id="@+id/subject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/subject"
        android:textColor="@color/black"
        android:textStyle="bold"
        />
    <EditText
        android:id="@+id/messageEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/message"
        android:minHeight="150dp"
        android:gravity="start"
        android:textStyle="bold"
        android:textColor="@color/black"
        />
    <Button
        android:id="@+id/sendEmailBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_email"
        android:layout_gravity="end"
        />





</LinearLayout>