<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NotificationActivity">


    <TextView
        android:id="@+id/selectedTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:text="@string/_08_45_pm"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="46sp"
        />

    <Button
        android:id="@+id/selectTimeBtn"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="35dp"
        android:layout_marginHorizontal="26dp"
        android:text="@string/select_time"
        android:textSize="24sp" />

    <Button
        android:id="@+id/setAlarmBtn"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="26dp"
        android:textSize="24sp"
        android:text="@string/set_alarm"
        />

    <Button
        android:id="@+id/cancelAlarmBtn"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="26dp"
        android:textSize="24sp"
        android:text="@string/cancel_alarm"
        />


</LinearLayout>