<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="130dp"
        android:layout_height="110dp"
        android:layout_marginTop="5dp"
        android:src="@drawable/b"
        app:civ_border_color="@color/purple_700"
        tools:ignore="MissingConstraints" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/project_partners"
        android:textColor="@color/purple_700"
        android:textStyle="bold"
        android:textSize="23sp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:padding="10dp"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/ijlalImg"
                android:layout_width="130dp"
                android:layout_height="110dp"
                android:layout_marginTop="32dp"
                android:src="@drawable/myimage"
                android:layout_marginEnd="30dp"
                app:civ_border_color="@color/purple_700"
                tools:ignore="MissingConstraints" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ijlal_hussain"
                android:textSize="15sp"
                android:layout_marginEnd="30dp"
                android:textAlignment="center"
                android:textColor="@color/black"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fa18_bse_083"
                android:layout_marginEnd="30dp"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:textAlignment="center"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/software_engineer"
                android:layout_marginEnd="30dp"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:textAlignment="center"
                />



        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/baslaImg"
                android:layout_width="130dp"
                android:layout_height="110dp"
                android:layout_marginTop="32dp"
                android:src="@drawable/gallary"
                android:layout_marginStart="30dp"
                app:civ_border_color="@color/black"
                tools:ignore="MissingConstraints" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/basla_azhar"
                android:textSize="15sp"
                android:layout_marginStart="30dp"
                android:textAlignment="center"
                android:textColor="@color/black"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fa18_bse_057"
                android:textSize="15sp"
                android:layout_marginStart="30dp"
                android:textColor="@color/black"
                android:textAlignment="center"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/software_engineer"
                android:textSize="15sp"
                android:layout_marginStart="30dp"
                android:textColor="@color/black"
                android:textAlignment="center"
                />



        </LinearLayout>


    </LinearLayout>




    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        android:layout_margin="20dp"
        app:contentPadding="20dp"
        android:onClick="expand"
        tools:ignore="UsingOnClickInXml">

        <LinearLayout
            android:id="@+id/layout"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/click_here"
                android:textSize="24sp"
                />
            <TextView
                android:id="@+id/details_text"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/details"
                android:textSize="16sp"
                />


        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/checkImplementation_Btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="17sp"
        android:text="@string/check_implementation"
        android:background="@drawable/roundbtn"
        android:textAllCaps="false">
    </androidx.appcompat.widget.AppCompatButton>



</LinearLayout>